<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_main" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_detail_info" >

            <TextView
                android:id="@+id/lblDesc"
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_detail_info"
                android:layout_marginTop="@dimen/padding_detail_info"
                android:gravity="center"
                android:text="@string/app_description"
                android:textColor="@color/text_sub_title" />

            <TextView
                android:id="@+id/lblCopyright"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/padding_detail_info"
                android:layout_marginTop="@dimen/padding_detail_info"
                android:gravity="center"
                android:text="@string/copyright"
                android:textColor="@color/text_link" />

            <Button
                android:id="@+id/btnmerchant"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/apptheme_btn_default_holo_light"
                android:text="@string/btn_merchant"
                android:textColor="@color/text_btn" />

            <Button
                android:id="@+id/btnShare"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_share"
                android:layout_marginTop="@dimen/margin_share"
                android:background="@drawable/apptheme_btn_default_holo_light"
                android:text="@string/btn_tell_friend"
                android:textColor="@color/text_btn" />

            <Button
                android:id="@+id/btnRate"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/apptheme_btn_default_holo_light"
                android:text="@string/btn_rate_app"
                android:textColor="@color/text_btn" />
        </LinearLayout>

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            android:layout_marginTop="@dimen/padding_detail_info"
            android:background="#acacac"
            android:padding="5dp"
            android:text="Contact detail"
            android:textColor="@android:color/white" />

        <TextView
           style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_detail_info"
            android:text="@string/mobile"
            android:textColor="@color/text_sub_title" />

        <TextView
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_detail_info"
            android:text="@string/email"
            android:textColor="@color/text_sub_title" />

        <TextView
             android:id="@+id/tvwebsite"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_detail_info"
            android:text="@string/website"
            android:textColor="@android:color/holo_blue_dark" />
    </LinearLayout>

</ScrollView>